--- a/guess.css
+++ b/guess.css
@@ -7,13 +7,13 @@
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    background-color: #EEE;
+    background-color: #a29e9e;
 }
 h1{
     text-align: center;
     padding: 20px;
     margin: 0 0 50px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 .guess-game{
     text-align: center;
@@ -22,4 +22,31 @@ h1{
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    .game-area{
+        text-align: center;
+    }
+    .key-colors{
+        .Key-color{
+            display: flex;
+            align-items: center;
+            padding: 15px;
+            background-color: rgb(231, 149, 149);
+            margin-bottom: 10px;
+        .key{
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin-right: 10px;
+            &.in-place{
+                background-color: #f89e13;
+            }
+            &.not-in-place{
+                background-color: green;
+            }
+            &.not-in-word{
+                background-color: gray;
+            }
+        }
+        }
+    }
 }
